# isoprompt

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
docs/: API_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md
docs/specs/: ADO_INTEGRATION.md  PROMPT_ENGINEERING_BEST_PRACTISES.md
examples/: README.md  basic_usage.py
isoprompt/: __init__.py  __main__.py  cli.py  constants.py  domains.py  models.py  modes.py  optimizer.py  py.typed  templates.py
isoprompt/prompts/: prompt_guidelines.md
pyprompt/: __init__.py  __main__.py  cli.py  constants.py  domains.py  models.py  modes.py  py.typed  templates.py
